--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.havok.physics": "0.4.0-preview.1",
     "com.unity.burst": "1.3.9",
     "com.unity.collab-proxy": "1.3.9",
     "com.unity.dots.editor": "0.8.2-preview",
@@ -7,7 +8,7 @@
     "com.unity.ide.rider": "1.2.1",
     "com.unity.ide.visualstudio": "2.0.2",
     "com.unity.ide.vscode": "1.2.1",
-    "com.unity.rendering.hybrid": "0.5.2-preview.4",
+    "com.unity.rendering.hybrid": "0.8.0-preview.19",
     "com.unity.shadergraph": "8.2.0",
     "com.unity.test-framework": "1.1.16",
     "com.unity.textmeshpro": "3.0.1",
