add environment avoidance

--- a/Assets/Boids/Scripts/Samples.Boids.asmdef
+++ b/Assets/Boids/Scripts/Samples.Boids.asmdef
@@ -11,7 +11,8 @@
         "Unity.Jobs",
         "Unity.Mathematics",
         "Unity.Mathematics.Extensions",
-        "Unity.Mathematics.Extensions.Hybrid"
+        "Unity.Mathematics.Extensions.Hybrid",
+        "Unity.Physics"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
